--- a/reg.css
+++ b/reg.css
@@ -37,6 +37,11 @@ form {
     color: lightgray;
   }
 
+  .error {
+    color: red;
+    font-size: 14px;
+    margin-top: 5px;
+}
 
 #firstName,
 #lastName,
