--- a/bac.css
+++ b/bac.css
@@ -1,58 +1,26 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+* {
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 2px;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-}
-
-  input {
+  }
+  .wrapper {
+    height: 100%;
     width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    box-sizing: border-box;
+    background: linear-gradient(180deg, #04fafd, 5%, #119dff, 50%, #030423);
+    position: absolute;
   }
-  button {
-    background-color: #4caf50;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  .wrapper h1 {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    font-family: sans-serif;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: 888;
+    text-transform: uppercase;
   }
-
-  .confirm{
-    display: flex;
-    justify-content: space-between;
-    height: 30px;
-  }
-
-  * {
-    margin: 0;
-    padding: 0;
-  }
- .wrapper {
-        height: 100vh; /* Set the height of the wrapper to cover the entire viewport height */
-        width: 100%; /* Set the width to cover the entire viewport width */
-        background: linear-gradient(180deg, #04fafd, 5%, #119dff, 50%, #030423);
-        position: fixed; /* Fixed position to keep it as a background */
-        top: 0;
-        left: 0;
-        z-index: -1; /* Move it to the background */
-    }
-  
   .wrapper div {
     height: 60px;
     width: 60px;
@@ -152,5 +120,6 @@ form {
       transform: scale(0) translateY(0) rotate(70deg);
     }
     100% {
-      transform: scale(1.3) translateY(-100px) rotate(360deg);}
-}
+      transform: scale(1.3) translateY(-100px) rotate(360deg);
+    }
+  }
